--- a/Room_LiveData/app/src/main/res/values/strings.xml
+++ b/Room_LiveData/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">TODOs</string>
     <string name="action_inflate">Inflate Data</string>
     <string name="action_delete_all">Delete Data</string>
+    <string name="hint_word">Word...</string>
+    <string name="button_save">Save</string>
+    <string name="empty_not_saved">Word not saved because it is empty.</string>
 </resources>
